--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   npm install -g serverless
 
 install:
-  npm install
+  node docker-npm.js install
 
 script:
   npm test && serverless deploy
