--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,7 @@ provider:
 
 resources:
   Resources:
-    astroseedSQSRole:
+    midsomerSQSRole:
       Type: AWS::IAM::Role
       Properties:
         RoleName: midsomerSQSRole
@@ -68,6 +68,7 @@ functions:
     events:
       - schedule: rate(4 hours)
     memorySize: 128
+    role: midsomerSQSRole
     environment:
       SQS_QUEUE_URL: ${env:SQS_QUEUE_URL}
       TWITTER_CONSUMER_KEY: ${env:TWITTER_CONSUMER_KEY}
