extra IAM action allowed for deleting received SQS message

--- a/serverless.yml
+++ b/serverless.yml
@@ -47,6 +47,7 @@ resources:
                   Action:
                     - sqs:SendMessage
                     - sqs:ReceiveMessage
+                    - sqs:DeleteMessage
                   Resource: "arn:aws:sqs:us-east-1:*:*"
                 - Effect: Allow # note that these rights are given in the default policy and are required if you want logs out of your lambda(s)
                   Action:
