code (untested while I await twitter DM API beta access) for plots by DM

--- a/serverless.yml
+++ b/serverless.yml
@@ -76,3 +76,29 @@ functions:
       TWITTER_CONSUMER_SECRET: ${env:TWITTER_CONSUMER_SECRET}
       TWITTER_ACCESS_TOKEN_KEY: ${env:TWITTER_ACCESS_TOKEN_KEY}
       TWITTER_ACCESS_TOKEN_SECRET: ${env:TWITTER_ACCESS_TOKEN_SECRET}
+
+  twitterDM_get:
+    handler: twitterDM.get
+    events:
+      - http:
+          path: twitter/webhook
+          method: get
+          cors: true
+    environment:
+      TWITTER_CONSUMER_KEY: ${env:TWITTER_CONSUMER_KEY}
+      TWITTER_CONSUMER_SECRET: ${env:TWITTER_CONSUMER_SECRET}
+      TWITTER_ACCESS_TOKEN_KEY: ${env:TWITTER_ACCESS_TOKEN_KEY}
+      TWITTER_ACCESS_TOKEN_SECRET: ${env:TWITTER_ACCESS_TOKEN_SECRET}
+
+  twitterDM_post:
+    handler: twitterDM.post
+    events:
+      - http:
+          path: twitter/webhook
+          method: post
+          cors: true
+    environment:
+      TWITTER_CONSUMER_KEY: ${env:TWITTER_CONSUMER_KEY}
+      TWITTER_CONSUMER_SECRET: ${env:TWITTER_CONSUMER_SECRET}
+      TWITTER_ACCESS_TOKEN_KEY: ${env:TWITTER_ACCESS_TOKEN_KEY}
+      TWITTER_ACCESS_TOKEN_SECRET: ${env:TWITTER_ACCESS_TOKEN_SECRET}
