--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "chai": "^4.1.2",
     "mersenne-twister": "^1.1.0",
+    "request": "^2.83.0",
     "text2png": "^1.0.1",
     "twitter": "^1.7.1"
   },
