--- a/serverless.yml
+++ b/serverless.yml
@@ -89,6 +89,8 @@ functions:
       TWITTER_CONSUMER_SECRET: ${env:TWITTER_CONSUMER_SECRET}
       TWITTER_ACCESS_TOKEN_KEY: ${env:TWITTER_ACCESS_TOKEN_KEY}
       TWITTER_ACCESS_TOKEN_SECRET: ${env:TWITTER_ACCESS_TOKEN_SECRET}
+      FACEBOOK_PAGE_ID: ${env:FACEBOOK_PAGE_ID}
+      FACEBOOK_ACCESS_TOKEN: ${env:FACEBOOK_ACCESS_TOKEN}
 
   twitterDM_get:
     warmup: true
