also keep the twitter DM post lambda warm

--- a/serverless.yml
+++ b/serverless.yml
@@ -107,6 +107,7 @@ functions:
       TWITTER_ACCESS_TOKEN_SECRET: ${env:TWITTER_ACCESS_TOKEN_SECRET}
 
   twitterDM_post:
+    warmup: true
     handler: twitterDM.post
     events:
       - http:
