--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Midsomer Murder Plot generator",
   "main": "bot.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha && eslint .",
     "deploy": "serverless deploy"
   },
   "repository": {
@@ -28,6 +28,7 @@
   "devDependencies": {
     "aws-sdk": "^2.169.0",
     "mocha": "^4.0.1",
+    "eslint": "^4.15.0",
     "serverless-plugin-warmup": "^3.3.0-rc.1"
   }
 }
