dynamodb stuff for #8

--- a/serverless.yml
+++ b/serverless.yml
@@ -55,7 +55,7 @@ resources:
         AttributeDefinitions:
           -
             AttributeName: id
-            AttributeType: N
+            AttributeType: S
         KeySchema:
           -
             AttributeName: id
