revert to id being a number in dynamodb table - should fix travis build issue, and is consistent with code from previous commit

--- a/serverless.yml
+++ b/serverless.yml
@@ -55,7 +55,7 @@ resources:
         AttributeDefinitions:
           -
             AttributeName: id
-            AttributeType: S
+            AttributeType: N
         KeySchema:
           -
             AttributeName: id
