--- a/serverless.yml
+++ b/serverless.yml
@@ -107,6 +107,7 @@ functions:
     events:
       - schedule: rate(4 hours)
     memorySize: 128
+    timeout: 12
     role: midsomerSQSRole
     environment:
       SQS_QUEUE_URL: ${env:SQS_QUEUE_URL}
