--- a/serverless.yml
+++ b/serverless.yml
@@ -100,6 +100,10 @@ resources:
                         - Ref: 'AWS::Region'
                         - Ref: 'AWS::AccountId'
                         - 'log-group:/aws/lambda/*:*:*'
+                - Effect: Allow
+                  Action:
+                    - secretsmanager:GetSecretValue
+                  Resource: "arn:aws:secretsmanager:us-east-1:455563481328:secret:midsomerplots-hwtnWE"
 
 functions:
   bot:
