expiry of IDs from dynamodb after 1 hr (not required any longer to dedup)

--- a/serverless.yml
+++ b/serverless.yml
@@ -56,6 +56,9 @@ resources:
           -
             AttributeName: id
             AttributeType: N
+          -
+            AttributeName: ttl
+            AttributeType: N
         KeySchema:
           -
             AttributeName: id
