support for scheduled mastodon toots

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -99,7 +99,7 @@
         "max-len": "off",
         "max-lines": "warn",
         "max-nested-callbacks": "error",
-        "max-params": "error",
+        "max-params": "off",
         "max-statements": "off",
         "max-statements-per-line": "off",
         "multiline-comment-style": [
