--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ service: midsomerplots # NOTE: update this with your service name
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs10.x
   stage: prod
   region: us-east-1
   iamRoleStatements:
