--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "eslint": "^7.4.0"
+    "eslint": "^7.4.0",
+    "serverless-dotenv-plugin": "^2.4.2"
   }
 }
