switch to arm64

--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs14.x
+  architecture: arm64
   stage: prod
   region: us-east-1
   iamRoleStatements:
