--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "eslint": "^8.30.0",
-    "serverless-dotenv-plugin": "^4.0.2"
+    "eslint": "^8.30.0"
   }
 }
