--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   },
   "homepage": "https://github.com/matthewberryman/midsomerplots",
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.259.0",
-    "megalodon": "^5.1.1",
+    "@aws-sdk/client-secrets-manager": "^3.312.0",
+    "express": "^4.18.2",
+    "megalodon": "^5.4.4",
     "mersenne-twister": "^1.1.0",
     "midsomerplots-content": "github:matthewberryman/midsomerplots-content#9759aa18a68635e8fe8cdd7f2f6484471e79ac8d",
+    "readline-sync": "^1.4.10",
     "request": "^2.88.2",
-    "twitter": "^1.7.1"
+    "twitter-api-v2": "^1.14.2"
   },
   "devDependencies": {
-    "eslint": "^8.33.0",
-    "serverless-prune-plugin": "^2.0.1"
+    "eslint": "^8.38.0",
+    "serverless-prune-plugin": "^2.0.2"
   }
 }
