--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "midsomermurderplots",
   "version": "3.0.0",
   "license": "GPL-3.0",
-  "description": "Midsomer Murder Plot generator",
+  "description": "Matthew's bots",
   "type": "module",
   "main": "bot.js",
   "scripts": {
@@ -22,17 +22,17 @@
   },
   "homepage": "https://github.com/matthewberryman/midsomerplots",
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.312.0",
+    "@aws-sdk/client-secrets-manager": "^3.363.0",
     "express": "^4.18.2",
-    "megalodon": "^5.4.4",
+    "megalodon": "^6.1.1",
     "mersenne-twister": "^1.1.0",
     "midsomerplots-content": "github:matthewberryman/midsomerplots-content#9759aa18a68635e8fe8cdd7f2f6484471e79ac8d",
+    "JaneAustenQuotes": "github:matthewberryman/JaneAustenQuotes#ea56d2d0c98c220fc2ca2cd2432f81caad973af3",
     "readline-sync": "^1.4.10",
-    "request": "^2.88.2",
-    "twitter-api-v2": "^1.14.2"
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "eslint": "^8.38.0",
+    "eslint": "^8.44.0",
     "serverless-prune-plugin": "^2.0.2"
   }
 }
