--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
   },
   "homepage": "https://github.com/matthewberryman/midsomerplots",
   "dependencies": {
-    "@aws-sdk/client-secrets-manager": "^3.385.0",
+    "@atproto/api": "^0.6.20",
+    "@aws-sdk/client-secrets-manager": "^3.425.0",
     "express": "^4.18.2",
-    "megalodon": "^6.1.5",
+    "JaneAustenQuotes": "github:matthewberryman/JaneAustenQuotes#ea56d2d0c98c220fc2ca2cd2432f81caad973af3",
+    "megalodon": "^8.1.3",
     "mersenne-twister": "^1.1.0",
     "midsomerplots-content": "github:matthewberryman/midsomerplots-content#e00417852dac19ad389910a59d310cf0c478a519",
-    "JaneAustenQuotes": "github:matthewberryman/JaneAustenQuotes#ea56d2d0c98c220fc2ca2cd2432f81caad973af3",
     "readline-sync": "^1.4.10",
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
+    "eslint": "^8.50.0",
     "serverless-prune-plugin": "^2.0.2"
   }
 }
