use pnpm in build

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - npm install
+      - pnpm install
   build:
     commands:
       - npm install -g serverless
