try and fix deps

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@aws-sdk/client-secrets-manager": "^3.496.0",
     "JaneAustenQuotes": "github:matthewberryman/JaneAustenQuotes#ea56d2d0c98c220fc2ca2cd2432f81caad973af3",
     "megalodon": "^9.1.2",
-    "midsomerplots-content": "github:matthewberryman/midsomerplots-content#fd6fdd4f5faad76ead7dab88e2b0a824140f1098"
+    "midsomerplots-content": "github:matthewberryman/midsomerplots-content#fd6fdd4f5faad76ead7dab88e2b0a824140f1098",
+    "@aashutoshrathi/word-wrap": "^1.2.6"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
